<resources>
    <string name="app_name">ProHuman AI</string>
    <string name="heading">Modelos de previsão de fome em tempo real</string>
    <string name="blocoUm">Combine diversos dados para identificar áreas em risco de fome</string>
    <string name="blocoDois">Monitore a desnutrição e promova intervenções médicas e nutricionais</string>
    <string name="blocoTres">Obtenha orientações para desenvolver práticas agrícolas de subsistência</string>
    <string name="blocoQuatro">Mobilize recursos com antecedência e se antecipe em emergências</string>
    <string name="btnAbrir">Abrir ProHuman AI</string>
    <string name="btnEntrar">Entrar</string>
    <string name="labelEmail">E-mail</string>
    <string name="labelSenha">Senha</string>
    <string name="inputEmail">Digite seu e-mail</string>
    <string name="inputSenha">Digite sua senha</string>
    <string name="btnEsqueci">Esqueci minha senha</string>
    <string name="btnLembrar">Lembre-se de mim</string>
    <string name="inputBuscar">Busque por local</string>
    <string name="btnAbrirTabela">Abrir Tabela</string>
    <string name="btnVerDados">Ver Dados</string>
    <string name="btnAbrirMapa">Abrir Mapa</string>
    <string name="pais">Brasil</string>
    <string name="local">São Paulo - SP</string>
    <string name="nivelFome">Nível do risco de fome</string>
    <string name="nrNivelTitle">35/50</string>
    <string name="nrNivel">7</string>
    <string name="indicadorUm">1. Alertas e mobilização de recursos</string>
    <string name="indicadorDois">2. Distribuição de alimentos e suplementos</string>
    <string name="indicadorTres">3. Agricultura de subsistência</string>
    <string name="indicadorQuatro">4. Programas de transferência de renda</string>
    <string name="indicadorCinco">5. Monitoramento da desnutrição e intervenções médicas</string>
    <string name="topicoUm">• Eficiência do modelo de previsão em identificar riscos iminentes de fome</string>
    <string name="topicoDois">• Capacidade de alertar governos, ONGs e agências de ajuda com antecedência</string>
    <string name="topicoTres">• Taxa de resposta pronta e mobilização efetiva de recursos</string>
    <string name="topicoQuatro">• Eficiência na distribuição de alimentos e suplementos nutricionais</string>
    <string name="topicoCinco">• Número de parcerias com governos, ONGs e empresas privadas</string>
    <string name="topicoSeis">• Acessibilidade e cobertura da distribuição para as comunidades vulneráveis</string>
    <string name="topicoSete">• Efetividade das práticas agrícolas de subsistência recomendadas</string>
    <string name="topicoOito">• Número de comunidades capacitadas e técnicas de cultivo sustentáveis</string>
    <string name="topicoNove">• Autossuficiência alcançada pelas comunidades em de produção de alimentos</string>
    <string name="topicoDez">• Eficiência na identificação e seleção das famílias mais vulneráveis</string>
    <string name="topicoOnze">• Eficácia dos programas de transferência de renda em fornecer recursos financeiros adequados</string>
    <string name="topicoDoze">• Capacidade das famílias em adquirir alimentos e suprir necessidades durante períodos de escassez</string>
    <string name="topicoTreze">• Capacidade de identificar áreas em risco de desnutrição aguda com precisão</string>
    <string name="topicoQuatorze">• Tempo de resposta e eficácia das intervenções médicas para tratamento e cuidados especializados</string>
    <string name="topicoQuinze">• Redução dos índices de desnutrição e melhoria da saúde nas áreas atendidas</string>
    <string name="btnVoltar">Voltar</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>